# mini_connect_tool

./: .gitignore  README.md  pyproject.toml
examples/: conjunction.py  tutorial.ipynb  vstp_solo.py
mini_connect_tool/: fieldlines.py  load_maps.py  mini_connect_tool.py  spacecraft_coords.py  sph_harmonics.py  timeseries.py
